--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^10.0.27",
     "@storybook/addon-docs": "^6.0.20",
     "@storybook/addon-knobs": "^6.0.20",
+    "@storybook/addon-viewport": "^6.0.20",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
