--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@chakra-ui/core": "^0.8.0",
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
+    "@storybook/addon-a11y": "^6.0.20",
     "@storybook/addon-docs": "^6.0.20",
     "@storybook/addon-knobs": "^6.0.20",
     "@storybook/addon-viewport": "^6.0.20",
